2004-04-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* load-save.cc (get_file_format): Error if file does not exist.
	(Fload): Also complain here if specific file type is specified and
	file does not exist.

2004-04-02  Quentin Spencer  <qspencer@ieee.org>

	* parse.y: Use persistent instead of static in warnings messages.

2004-04-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-decl.cc (tree_static_command::do_init): Initialize to empty
	matrix by default.

2004-04-02  David Bateman  <dbateman@free.fr>

	* ov-re-mat.cc (octave_matrix::convert_to_str_internal):
	Return charNDArray.
	* ov-bool-mat.cc (octave_bool_matrix::convert_to_str_internal):
	Call array_value.
	
	* DLD-FUNCTIONS/besselj.cc, DLD-FUNCTIONS/betainc.cc,
	DLD-FUNCTIONS/gammainc.cc, DLD-FUNCTIONS/minmax.cc,
	DLD-FUNCTIONS/filter.cc:
	Convert for NDArray, better Matlab compatibility.

	* load-save.cc (Fload): Better handling of non existent files.
	
2004-03-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-list.cc (octave_list::subsref): Correctly create return value.
	Return comma-separate list if {-style indexing extracts more than
	one value.

2004-03-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-cell.cc (octave_cell::save_hdf5): Handle empty cells.
	(octave_cell::load_hdf5): Likewise.

2004-03-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-base-mat.cc (octave_base_matrix<MT>::subsasgn): If empty,
	allow type conversion when indexing with "{" and ".".

2004-03-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pr-output.cc (init_format_state): Also set compact_format.
	(pr_col_num_header): Print one newline character before column
	headers for compact format.

2004-03-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* version.h (OCTAVE_WWW_STATEMENT): New macro.
	(OCTAVE_STARTUP_MESSAGE): Include it here.
	(OCTAVE_NAME_VERSION_COPYRIGHT_COPYING_WARRANTY_AND_BUGS): And here.

	* octave.cc (verbose_usage): Use OCTAVE_WWW_STATEMENT here.
